src/horseir/v2/tests/fail/t10.hir
// 10 : duplicate vars

module var_decl{
    def main(){
        x:i32 = 1:i32;
        x:f32 = 2:i32;
    }
}

